--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -19,6 +19,7 @@
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.15",
     "dotenv": "^17.2.0",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^9.31.0",
     "globals": "^16.3.0",
     "prettier": "^3.6.2",
@@ -27,6 +28,8 @@
     "typescript-eslint": "^8.37.0"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "drizzle-orm": "^0.44.3",
+    "express": "^5.1.0",
+    "postgres": "^3.4.7"
   }
 }
