--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -18,17 +18,19 @@
     "@tsconfig/node22": "^22.0.2",
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.15",
+    "@types/pg": "^8.15.4",
     "dotenv": "^17.2.0",
     "drizzle-kit": "^0.31.4",
+    "drizzle-orm": "^0.44.3",
     "eslint": "^9.31.0",
     "globals": "^16.3.0",
+    "pg": "^8.16.3",
     "prettier": "^3.6.2",
     "tsx": "^4.20.3",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.37.0"
   },
   "dependencies": {
-    "drizzle-orm": "^0.44.3",
     "express": "^5.1.0",
     "postgres": "^3.4.7"
   }
