--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -17,6 +17,7 @@
     "@eslint/js": "^9.31.0",
     "@tsconfig/node22": "^22.0.2",
     "@types/express": "^5.0.3",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.0.15",
     "@types/pg": "^8.15.4",
     "dotenv": "^17.2.0",
@@ -24,6 +25,7 @@
     "drizzle-orm": "^0.44.3",
     "eslint": "^9.31.0",
     "globals": "^16.3.0",
+    "jest": "^30.0.4",
     "pg": "^8.16.3",
     "prettier": "^3.6.2",
     "tsx": "^4.20.3",
