add db commands

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -7,6 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "lint": "eslint .",
+    "db:push": "drizzle-kit push",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio",
     "type-check": "tsc --noEmit",
     "dev": "tsx --watch src/index.ts"
   },
