--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -18,23 +18,22 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@eslint/js": "^9.31.0",
+    "@eslint/js": "^9.32.0",
     "@tsconfig/node22": "^22.0.2",
     "@types/express": "^5.0.3",
-    "@types/jest": "^30.0.0",
-    "@types/node": "^24.0.15",
-    "@types/pg": "^8.15.4",
-    "dotenv": "^17.2.0",
+    "@types/node": "^24.1.0",
+    "@types/pg": "^8.15.5",
+    "dotenv": "^17.2.1",
     "drizzle-kit": "^0.31.4",
-    "drizzle-orm": "^0.44.3",
-    "eslint": "^9.31.0",
+    "drizzle-orm": "^0.44.4",
+    "eslint": "^9.32.0",
     "globals": "^16.3.0",
-    "jest": "^30.0.4",
     "pg": "^8.16.3",
     "prettier": "^3.6.2",
     "tsx": "^4.20.3",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.37.0"
+    "typescript-eslint": "^8.38.0",
+    "vitest": "^3.2.4"
   },
   "dependencies": {
     "@types/cors": "^2.8.19",
