chore: add vitest script and example test

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "test:unsw": "tsx --require dotenv/config src/tests/some.test.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest run",
     "build": "tsc",
     "lint": "eslint .",
     "db:push": "drizzle-kit push",
