--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -31,6 +31,7 @@
     "globals": "^16.3.0",
     "pg": "^8.16.3",
     "prettier": "^3.6.2",
+    "socket.io-client": "^4.8.1",
     "tsx": "^4.20.3",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.38.0",
