--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
+    "test:unsw": "tsx --require dotenv/config src/tests/some.test.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "lint": "eslint .",
@@ -38,6 +39,7 @@
   },
   "dependencies": {
     "@types/cors": "^2.8.19",
+    "axios": "^1.11.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "postgres": "^3.4.7"
