--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   ],
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "uuid": "^11.1.0"
+  }
 }
