--- a/package.json
+++ b/package.json
@@ -18,8 +18,5 @@
   ],
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "uuid": "^11.1.0"
-  }
+  "license": "ISC"
 }
