--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -38,6 +38,7 @@
     "vitest": "^3.2.4"
   },
   "dependencies": {
+    "@googlemaps/places": "^2.1.0",
     "@types/cors": "^2.8.19",
     "axios": "^1.11.0",
     "cors": "^2.8.5",
