--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -1,9 +1,14 @@
 {
   "extends": "@tsconfig/node22/tsconfig.json",
   "compilerOptions": {
+    "resolveJsonModule": true,
     "outDir": "./dist",
     "rootDir": "./"
   },
-  "include": ["**/*.ts"],
-  "exclude": ["dist"]
+  "include": [
+    "**/*.ts"
+  ],
+  "exclude": [
+    "dist"
+  ]
 }
