--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "test:unsw": "tsx --require dotenv/config src/tests/some.test.ts",
     "test": "vitest run",
     "build": "tsc",
     "lint": "eslint .",
@@ -22,6 +21,7 @@
     "@eslint/js": "^9.32.0",
     "@tsconfig/node22": "^22.0.2",
     "@types/express": "^5.0.3",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^24.1.0",
     "@types/pg": "^8.15.5",
     "@types/supertest": "^6.0.2",
@@ -47,6 +47,7 @@
     "axios": "^1.11.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "morgan": "^1.10.1",
     "postgres": "^3.4.7",
     "socket.io": "^4.8.1",
     "swagger-ui-express": "^5.0.1",
