--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -45,6 +45,7 @@
     "@googlemaps/places": "^2.1.0",
     "@types/cors": "^2.8.19",
     "axios": "^1.11.0",
+    "bullmq": "^5.58.5",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "morgan": "^1.10.1",
