--- a/apps/backend/api-schema.yaml
+++ b/apps/backend/api-schema.yaml
@@ -26,6 +26,7 @@ paths:
               location: "Sydney, Australia"
               cuisine: "Italian"
               priceLevel: "$$"
+              endDate: "2025-01-01T12:00:00.000Z"
               minRating: 4
       responses:
         '200':
